--- a/resources/styles/styles.css
+++ b/resources/styles/styles.css
@@ -25,3 +25,20 @@ footer div img {
     filter: brightness(0.5);
 }
 
+.card-img-top {
+    height: 200px;
+    object-fit: cover;
+}
+
+.card {
+    height: 420px!important;
+    overflow: hidden;
+    box-shadow: 2px 2px 4px #00000022;
+    border-radius: 8px!important;
+}
+
+.card-body {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
